# contract-sdk-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  main.cc
.github/workflows/: publish-image.yml
example/: counter.cc
example/sanitizer_case/: Makefile
example/sanitizer_case/src/: main.cc
scripts/: emcc.Dockerfile  klee.Dockerfile
src/protobuf-c/: libprotobuf-c.la  protobuf-c.c  protobuf-c.lo
src/protobuf-c/.deps/: protobuf-c.Plo  protoc_c_protoc_gen_c-protobuf-c.pb.Po  t_generated_code2_cxx_generate_packed_data-protobuf-c.pb.Po
src/protobuf-c/.libs/: libprotobuf-c.1.dylib  libprotobuf-c.exp  libprotobuf-c.lai
src/xchain/: account.cc  basic_iterator.cc  context_impl.cc  context_impl.h  contract.cc  contract.pb-c.c  contract.pb-c.h  crypto.cc  error.h  exports.js  syscall.cc  syscall.h  transaction.cc  xchain.h
